# mesh-llm

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Justfile  LLAMA_SEC.md  MLX_ROADMAP.md  MLX_VALIDATION_MATRIX.md  MoE_PLAN.md  PLUGINS.md  Package.swift  README.md  RELEASE.md  install.sh  quicktest-gemma.sh  shapeup.md
.github/workflows/: behavior.yml  ci.yml  docker.yml  gpu-warm-cache-job.yml  llama-cache-keys.yml  llama-upstream-canary.yml  release.yml  smoke.yml  warm-caches.yml
app/: Info.plist  MeshLLM.swift  gen_icon.swift  justfile
docker/: Dockerfile.client  Dockerfile.cpu  Dockerfile.cuda  Dockerfile.rocm  Dockerfile.vulkan  SPEC_COMPLIANCE.md
docs/: cuda-release-lanes.md  index.html
evals/: backend-benchmark.py
evals/backend-benchmarking/: bench-backends.sh
evals/latency-benchmarking/: measure.py
mesh-api/: Cargo.toml  README.md
mesh-api-ffi/src/: lib.rs  mesh_ffi.udl
mesh-api-ffi/tests/: client_exports_compile.rs  smoke.rs
mesh-client/: Cargo.toml
mesh-llm/: AGENTS.md  Cargo.toml  README.md  TODO.md  test-mesh.sh
moe/: MOE_CLI_PLAN.md
mom/: PLAN.md  RESULTS.md
scripts/: build-mac.sh  build-windows.ps1  ci-exact-smoke.py  ci-gguf-smoke-test.sh  ci-mlx-smoke-test.sh  ci-mt-bench-behavior.py  ci-smoke-test.ps1  ci-smoke-test.sh  ci-thinking-smoke.py  detect-cuda-arch.sh  download-origin-checkpoints-studio54.sh  mlx-parity-exact.tsv  package-release.ps1  package-release.sh  release-version.sh  run-olmo2-local-matrix.sh  run-validation-case.sh  run-validation-matrix.py  set-workspace-version.sh
tools/: mock-vllm.py
(+210 files in other folders)
