[workspace]
members = [
    "mesh-llm",
    "mesh-llm/plugin",
    "mesh-llm/src/plugins/example",
    "mesh-llm/src/plugins/mlx-native",
]
default-members = [
    "mesh-llm",
    "mesh-llm/plugin",
    "mesh-llm/src/plugins/example",
]
resolver = "2"

[patch."https://github.com/oxideai/mlx-rs"]
mlx-rs = { git = "https://github.com/i386/mlx-rs", rev = "4b99baf961538509a5ebd7999ca4ed0431d734e3", package = "mlx-rs" }
mlx-lm = { git = "https://github.com/i386/mlx-rs", rev = "4b99baf961538509a5ebd7999ca4ed0431d734e3", package = "mlx-lm" }
mlx-lm-utils = { git = "https://github.com/i386/mlx-rs", rev = "4b99baf961538509a5ebd7999ca4ed0431d734e3", package = "mlx-lm-utils" }
